# mobile-framework

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
backend/: .dockerignore  Dockerfile  README.md  manage.py  requirements.txt
backend/rust_ext/: Cargo.toml  README.md  pyproject.toml
backend/rust_ext/python/mobile_framework_rust/: __init__.py
backend/rust_ext/src/: lib.rs
backend/rust_ext/tests/: test_python_wrapper.py
contracts/: COMPATIBILITY_MATRIX.md  README.md  SCHEMA_CONVENTIONS.md  generate_types.py  requirements.txt  validate_contracts.py  validation_manifest.json
docs/: README.md  site.json
frontend-admin/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
implementation-notes/: 00-project-vision.md  01-openimis-analysis.md  02-target-architecture.md  03-detailed-requirements.md  04-implementation-roadmap.md  05-github-project-breakdown.md  06-quality-security-testing.md  07-ci-cd-release-versioning.md  08-documentation-maintenance.md  09-codex-working-instructions.md  10-intellij-setup-and-owner-next-steps.md  11-github-tracking.md  12-project-status.md  README.md
infra/: README.md
mobile/: README.md  TESTING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
tools/: generate_release_assets.py  generate_release_manifest.py  generate_sbom.py  generate_staging_deployment_plan.py  validate_backend.py  validate_docs_site.py  validate_foundation.py  (+9 more)
(+319 files in other folders)
