[package]
name = "mobile-framework-rust"
version = "0.1.0"
edition = "2021"
description = "Bounded Rust helpers for the mobile framework backend."
license = "Apache-2.0"
publish = false

[lib]
name = "mobile_framework_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
