[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "mobile-framework-rust"
version = "0.1.0"
description = "Bounded Rust helpers for the mobile framework backend."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Mobile Framework Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[tool.maturin]
module-name = "mobile_framework_rust._native"
python-source = "python"
features = ["pyo3/extension-module"]
